First steps with mockldap

--- a/edir_reminder_service/tests/password.conf
+++ b/edir_reminder_service/tests/password.conf
@@ -1,8 +1,8 @@
 [common]
 server = ldap://localhost
 base_context = dc=localhost
-bind_dn = cn=admin,dc=localhost
-bind_password_base64 = bm92ZWxs
+bind_dn = cn=admin,ou=users,dc=localhost
+bind_password_base64 = YWRtaW5fc2VjcmV0
 starttls = true
 expiry_attribute = passwordExpirationTime
 notify_attribute = pwmNotify
