Add tests for algorithm and restrict feature, fixed several bugs on the way

--- a/edir_reminder_service/tests/password-tls.conf
+++ b/edir_reminder_service/tests/password-tls.conf
@@ -3,12 +3,13 @@ server = ldap://ldap
 base_context = dc=localhost
 bind_dn = cn=admin,ou=users,dc=localhost
 bind_password_base64 = YWRtaW5fc2VjcmV0
-starttls = false
+starttls = true
 expiry_attribute = passwordExpirationTime
 notify_attribute = pwmNotify
 
 [smtp]
 server = localhost
+starttls = true
 
 [test]
 to_address = root@localhost
@@ -19,7 +20,7 @@ subject = $weeks_left weeks left
 
 [14]
 from_text = Login Reminder
-subject = $weeks_left weeks left
+subject = $days_left days left
 
 [7]
 from_text = Login Reminder
