Add user_objectclass config option

--- a/ldap_notify/tests/password-tls.conf
+++ b/ldap_notify/tests/password-tls.conf
@@ -6,6 +6,7 @@ bind_password_base64 = YWRtaW5fc2VjcmV0
 starttls = true
 expiry_attribute = passwordExpirationTime
 notify_attribute = pwmNotify
+user_objectclass = pwmUser
 
 [smtp]
 server = localhost
