Turn base_dn into a list of DNs

--- a/ldap_notify/tests/password-tls.conf
+++ b/ldap_notify/tests/password-tls.conf
@@ -1,8 +1,8 @@
 [common]
 server = ldap://ldap
-base_context = dc=localhost
-bind_dn = cn=admin,ou=users,dc=localhost
-bind_password_base64 = YWRtaW5fc2VjcmV0
+bind_dn = cn=root,ou=admins,dc=localhost
+bind_password_base64 = cm9vdF9zZWNyZXQ=
+base_dn = ou=users,dc=localhost;ou=admins,dc=localhost
 starttls = true
 expiry_attribute = passwordExpirationTime
 notify_attribute = pwmNotify
