Add html template test case

--- a/ldap_notify/tests/password.conf
+++ b/ldap_notify/tests/password.conf
@@ -21,6 +21,7 @@ subject = $weeks_left weeks left
 [14]
 from_text = Login Reminder
 subject = $weeks_left weeks left
+html_template = ldap_notify/templates/notify.tmpl.html
 
 [7]
 from_text = Login Reminder
