--- a/ldap_notify/tests/password-tls.conf
+++ b/ldap_notify/tests/password-tls.conf
@@ -22,6 +22,7 @@ subject = $weeks_left weeks left
 [14]
 from_text = Login Reminder
 subject = $days_left days left
+html_template = ldap_notify/templates/notify.tmpl.html
 
 [7]
 from_text = Login Reminder
